Gnumeric 1.12.53

Morten:
	* Fix xlsx import of T.INV.
	* Fix inter-process array paste problem.  [#634]
	* Fix problem with xlsx number format 14.
	* Fix problems with complex number rendering.  [#638]
	* Fix near-denormal parsing case.  [#656]

--------------------------------------------------------------------------
Gnumeric 1.12.52

Morten:
	* Attach the vertical alignment selector to the toolbar.
	* Improve the toolbar styling a bit.
	* Fix toolbar overflow menu's labeling.
	* Many improvements to vertical toolbars.
	* Install appdata file in new location [#612]
	* Allow styling of cell extension indicators.
	* Restore bolding of active sheet tab.
	* Fix import of mildly broken print settings in xlsx files from
	  OnlyOffice.
	* Various --with-long-double fixes.
	* Fix BITAND.
	* Test improvements.
	* Fix xlsx write for sheet objects with text contents.  [#617]
	* Fix leak.
	* Fix old problem saving column widths.  [#619]
	* Set default number of sheets to 1.
	* Fix edge error case for SMALL and LARGE.  [#620]
	* Increase the default column width a bit.
	* Fix xlsx import/export of default column width.
	* Be less aggressive with automatic column widening.  [#621]

--------------------------------------------------------------------------
Gnumeric 1.12.51

Jean:
	* Fix error bars when data are in a multi-column array. [#594]
	* Always set the GO_DATA_HAS_VALUE flag when needed. [#595]

Morten:
	* Fix --with-long-double configuration.
	* Fix applix import/locale problem.
	* Make sure CEIL doesn't return -0.  [#603]
	* Add ILOG function.  [#591]
	* Fix MROUND.  [#604]
	* Take evasive action re g_memdup.
	* Fix inter-gnumeric array formula paste crash.  [#606]
	* Avoid re-querying file existance for recent files.  [Part of #602]
	* Fix rich-text rendering (based on work of Jean).  [#607]
	* Fix crash with conditional styling.  [#597]
	* Extend BITOR, BITAND, BITXOR to any numbers of arguments.
	* Fix ods export leak.  [#611]
