@@ -6,6 +6,7 @@ Morten:
 	* Fix problem with xlsx number format 14.
 	* Fix problems with complex number rendering.  [#638]
 	* Fix near-denormal parsing case.  [#656]
+	* Fix midly crazy ROUND edge cases.  [#661]
 
 --------------------------------------------------------------------------
 Gnumeric 1.12.52
